--- a/start/server/package.json
+++ b/start/server/package.json
@@ -1,6 +1,9 @@
 {
   "name": "fullstack-tutorial-server",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.13.1"
+  },
   "description": "",
   "main": "src/index.js",
   "scripts": {
